--- a/21postgre/package.json
+++ b/21postgre/package.json
@@ -16,8 +16,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
-    "pg-promise": "^10.11.1",
-    "sqlite3": "^5.0.2"
+    "pg-promise": "^10.11.1"
   },
   "main": "app.js",
   "devDependencies": {
