--- a/24pms/package.json
+++ b/24pms/package.json
@@ -9,14 +9,17 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-promise-router": "^4.1.0",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "session-rememberme": "^14.0.1"
   },
   "main": "app.js",
   "devDependencies": {
