--- a/24pms/package.json
+++ b/24pms/package.json
@@ -14,10 +14,12 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.1",
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "pg": "^8.7.1"
   },
   "main": "app.js",
