--- a/24pms/package.json
+++ b/24pms/package.json
@@ -18,9 +18,11 @@
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "underscore": "^1.13.1"
   },
   "main": "app.js",
   "devDependencies": {
