--- a/29.5 WebApp Instagram Lite/config/config.json
+++ b/29.5 WebApp Instagram Lite/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "riko",
+    "password": "12345",
+    "database": "instagramlitedb",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
