--- a/30 Restful-API/package.json
+++ b/30 Restful-API/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.3",
     "mongoose": "^6.0.14",
     "morgan": "~1.9.1"
   },
