--- a/30 Restful-API/package.json
+++ b/30 Restful-API/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "test": "mocha --timeout 10000"
+    "test": "mocha 'test/sasa.test.js'"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
