--- a/30 Restful-API/package.json
+++ b/30 Restful-API/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.14",
     "morgan": "~1.9.1"
   },
