--- a/cms/package.json
+++ b/cms/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.1.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-google-maps-location-selector": "^1.0.1",
     "vue-router": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
     "vuejs-google-maps": "^0.2.0",
