--- a/phonebook/api/package.json
+++ b/phonebook/api/package.json
@@ -12,7 +12,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "mongoose": "^6.1.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
