--- a/mobilku/api-mobilku/package.json
+++ b/mobilku/api-mobilku/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "seeder": "node ./seeder"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
